--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,12 +35,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Taller2
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-8.0.20.jar=C:\\Users\\Sidorf\\Downloads\\mysql-connector-java-8.0.20.jar
+file.reference.mysql-connector-j-8.0.32.jar=lib/mysql-connector-j-8.0.32.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.mysql-connector-java-8.0.20.jar}
+    ${file.reference.mysql-connector-j-8.0.32.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
