--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,7 +38,7 @@ excludes=
 file.reference.jcalendar-1.4.jar=lib/jcalendar-1.4.jar
 file.reference.mysql-connector-j-8.0.33.jar=lib\\mysql-connector-j-8.0.33.jar
 includes=**
-jar.compress=false
+jar.compress=true
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.mysql-connector-j-8.0.33.jar}:\
